# nodectrl

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  Dockerfile  README.md  config.h.in  deploy_key.enc  location.c  meson.build  nodectrl.c  nodectrl_mainloop.c  reboot.c  sysinfo.c  thermal.c
include/: nodectrl.h  sysinfo.h
include/nodectrl/: location.h  nodectrl.h  reboot.h  sysinfo.h  thermal.h
python/: nodectrl_cli  requirements.txt  setup.py
python/nodectrl/: __init__.py  sourcevalidation.py
tests/: conftest.py  nodectrl_test_ca.crt  nodectrl_test_control_cert.crt  nodectrl_test_control_cert.key  test_nodectrl.py  testdb.xdb
